# world-model-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  Dockerfile.http  LICENSE  OPEN_SOURCE_CHECKLIST.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_NOTES.md  docker-compose.yml  glama.json  manifest.json  push-to-github.sh  pyproject.toml  server.json
.github/workflows/: cla.yml  contradictions-benchmark.yml  mcp-conformance.yml  pytest.yml  release.yml  security.yml
adapters/codex/: README.md
adapters/continue/: README.md
adapters/cursor/: README.md  hooks.json  mcp.json
adapters/hermes/: README.md
adapters/hermes-memory-provider/: README.md
adapters/openclaw/: README.md  openclaw.json
adapters/pi/: README.md
benchmarks/coach-player/: README.md  pairs.json  run.py
benchmarks/coach-player/baselines/: v0.12.12-openrouter-haiku-4-5.json
benchmarks/contradictions/: RESULTS.md  dataset.jsonl  run.py
benchmarks/contradictions-200/: RESULTS.md  dataset.jsonl  run.py
benchmarks/repeat-mistake/: DESIGN.md  RESULTS.md  SEED_PLAN.md  agent_runner.py  baseline_classified.jsonl  baseline_classified_s2.jsonl  baseline_predictions.json  baseline_predictions_retry2.json  baseline_predictions_retry3.json  baseline_predictions_s2.json  baseline_predictions_s2_retry.json  baseline_predictions_s2_retry2.json  baseline_predictions_seed2.json  baseline_progress.jsonl  baseline_progress_s2.jsonl  baseline_progress_seed2.jsonl  baseline_results.jsonl  baseline_results_retry.jsonl  baseline_results_s2.jsonl  baseline_results_s2_retry.jsonl  baseline_results_s2_retry2.jsonl  baseline_results_seed2.jsonl  claude_client.py  clone_repo.py  constraints.json  constraints_raw.jsonl  constraints_s2.json  constraints_s2_raw.jsonl  failure_classifier.py  learning_hook.py  multi_seed_aggregate.py  multi_seed_summary_seed2.json  orchestrator.py  paper.md  predictions.py  score.py  select_subset.py  subset_50.json  task_setup.py  treatment_predictions_s1.json  (+19 more)
case-studies/v011-dogfooding/: CASE_STUDY.md  snapshot.json
docs/: AUDIT_LOG.md  MCP_2026_SPEC_READINESS.md  PRIVACY_TELEMETRY.md
docs/adapters/: README.md  buzz.md  goose.md  mesh-llm.md
docs/decisions/: 0001-pin-annotation-mcp-tool.md
docs/deployment/: managed-agents-self-hosted.md  mcp-tunnel.md
examples/: .mcp.json  use_with_anthropic_sdk.py
examples/.claude/: settings.json
examples/managed-agents-self-hosted/: README.md  ant-setup.sh  deploy_modal.py
fuzz/: README.md  fuzz_verify_manifest.py
fuzz/corpus/: adversarial_log_entries.json  deeply_nested.json  invalid_utf8.json  manifest_v1_stub.json  manifest_with_one_entry.json  manifest_wrong_version.json
hooks/: package-lock.json  package.json
hooks/src/: world-model-capture.ts  world-model-inject.ts  world-model-session.ts  world-model-validate.ts
scripts/: build_mcpb.sh  check_version_consistency.py  demo_seed.py  dogfooding_snapshot.py  embed_token.py  engagement_tracker.py  generate_slh_dsa_kat_vectors.py  install.sh
tests/: conftest.py  test_adapters_docs_config.py  test_audit_dump_export.py  test_audit_dump_streaming.py  test_decay_platform_stable.py  test_etch_verify.py  test_etch_verify_streaming.py  test_etch_verify_subprocess_e2e.py  test_fips_205_slh_dsa_kat.py  test_fuzz_smoke_verify.py  test_ingest.py  test_knowledge_graph.py  test_mcp_tool_dictionary.py  test_operational_e2e.py  test_pin_annotation_chain.py  test_pin_annotation_e2e.py  test_pin_annotation_schema.py  test_pin_annotation_tool.py  test_pin_annotation_verifier.py  test_pr_reviews.py  test_seeder.py  test_tamper_evident_concurrent_append.py  test_telemetry_v014_sink_migration.py  test_v010_continue_features.py  test_v010_hermes_features.py  test_v010_openclaw_features.py  test_v0110_hermes_memory_provider.py  test_v0110_setup_shell_quoting.py  test_v0111_content_type.py  test_v0112_dogfooding_case_study.py  test_v0120_doctor.py  test_v01211_spec_readiness.py  test_v01212_coach_player.py  test_v01213_doctor_copilot_check.py  test_v01213_openai_coach_backend.py  test_v01214_fts5_sanitizer.py  test_v0122_governance_schema.py  test_v0123_content_type_routing.py  test_v0124_install_copilot.py  test_v0125_install_continue_global.py  (+22 more)
tests/fixtures/: slh_dsa_kat_vectors.json
tests/integration/: README.md  test_buzz_acp_handshake.py  test_pin_annotation_integration.py
tests/security/: __init__.py  test_ed25519_wycheproof.py  test_pin_annotation_security.py
tests/security/vectors/: README.md
world_model_server/: __init__.py  _embedded_token.py  agents_md_reader.py  audit.py  audit_dump.py  audit_keys.py  claude_md_generator.py  cli.py  config.py  contradictions.py  decay.py  doctor.py  etch_verify.py  extraction.py  health.py  hook_helper.py  hybrid_signer.py  ingest.py  init.py  inject_helper.py  knowledge_graph.py  linters.py  mcp_tool_dictionary.py  memory_backend.py  merkle.py  models.py  pr_reviews.py  predictions.py  project_identity.py  promotion.py  registry.py  seeder.py  server.py  slash_command.py  spec_readiness.py  status_widget.py  tamper_evident.py  telemetry.py  tools.py  transcript.py  (+1 more)
world_model_server/adapters/cline/: mcp.json
world_model_server/adapters/codex/: config.toml  hooks_snippet.toml
world_model_server/adapters/continue_/: world-model.yaml
world_model_server/adapters/copilot/: mcp.json
world_model_server/adapters/cursor/: hooks.json  mcp.json
world_model_server/adapters/hermes/: config-snippet.yaml
world_model_server/adapters/pi/: index.ts  package.json
world_model_server/hermes_memory_provider/: README.md  __init__.py  plugin.yaml
world_model_server/hooks/: world-model-capture.js  world-model-inject.js  world-model-session.js  world-model-validate.js
