[project]
name = "world-model-mcp"
version = "0.10.0"
description = "MCP server that builds a world model for codebases to prevent hallucinations, repeated mistakes, and regressions"
authors = [
    {name = "SaravananJaichandar"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "ai", "code-assistant", "knowledge-graph", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]
http = [
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]
hermes = [
    "ruamel.yaml>=0.17",
]

[project.scripts]
world-model = "world_model_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["world_model_server"]

[tool.hatch.build.targets.wheel.force-include]
"world_model_server/adapters/cursor/hooks.json" = "world_model_server/adapters/cursor/hooks.json"
"world_model_server/adapters/cursor/mcp.json" = "world_model_server/adapters/cursor/mcp.json"
"world_model_server/adapters/pi/index.ts" = "world_model_server/adapters/pi/index.ts"
"world_model_server/adapters/pi/package.json" = "world_model_server/adapters/pi/package.json"
"world_model_server/adapters/codex/config.toml" = "world_model_server/adapters/codex/config.toml"
"world_model_server/adapters/codex/hooks_snippet.toml" = "world_model_server/adapters/codex/hooks_snippet.toml"
"world_model_server/adapters/openclaw/openclaw.json" = "world_model_server/adapters/openclaw/openclaw.json"
"world_model_server/adapters/hermes/config-snippet.yaml" = "world_model_server/adapters/hermes/config-snippet.yaml"
"world_model_server/adapters/continue_/world-model.yaml" = "world_model_server/adapters/continue_/world-model.yaml"
"world_model_server/hooks/world-model-capture.js" = "world_model_server/hooks/world-model-capture.js"
"world_model_server/hooks/world-model-inject.js" = "world_model_server/hooks/world-model-inject.js"
"world_model_server/hooks/world-model-session.js" = "world_model_server/hooks/world-model-session.js"
"world_model_server/hooks/world-model-validate.js" = "world_model_server/hooks/world-model-validate.js"
"scripts/demo_seed.py" = "scripts/demo_seed.py"
# Generated at wheel-build time by scripts/embed_token.py. The file is
# gitignored; force-include is a no-op when it doesn't exist locally.
"world_model_server/_embedded_token.py" = "world_model_server/_embedded_token.py"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
